<resources>
    <string name="app_name">MeW PhotoPrism</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="url">URL</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="download">Download</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="like">Like</string>
    <string name="import_from_usb_camera">Import from USB camera</string>
    <string name="waiting_for_camera">Waiting for camera...</string>
    <string name="start_sync">Start sync</string>
    <string name="usb_mtp_camera_sync">USB MTP camera sync</string>
    <string name="usb_disconnected">USB disconnected</string>
    <string name="photos">Photos</string>
    <string name="favorites">Favorites</string>
    <string name="albums">Albums</string>
    <string name="dirs">Dirs</string>
    <string name="calendar">Calendar</string>
</resources>