<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AccountDetailsFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/lblName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/txtAccName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textShortMessage"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/lblURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/url" />

            <EditText
                android:id="@+id/txtURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textUri"
                android:minHeight="48dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login" />

                    <EditText
                        android:id="@+id/txtLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="login"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password" />

                    <EditText
                        android:id="@+id/txtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:minHeight="48dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:text="@string/back"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btnDelete"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/delete"
                    android:textColor="@color/design_default_color_error" />

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/save"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>