<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/usbIcon"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_weight="0"
                android:contentDescription="@string/usb_disconnected"
                app:srcCompat="@drawable/usb_off_foreground" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="100"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:text="@string/usb_mtp_camera_sync"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtCameraData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/waiting_for_camera" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/start_stop_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:enabled="false"
            android:text="@string/start_sync" />

        <EditText
            android:id="@+id/txtLogFile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:duplicateParentState="false"
            android:editable="false"
            android:ems="10"
            android:enabled="false"
            android:gravity="start|top"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:padding="10dp"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>